--- a/Contactus.html
+++ b/Contactus.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Digital Recipe Book</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -89,6 +90,29 @@
             text-align: center;
             padding: 20px 0;
         }
+        footer .social-icons a {
+    font-size: 24px;
+    text-decoration: none;
+    transition: transform 0.3s;
+}
+
+/* Default brand colors */
+footer .social-icons a .fa-facebook-f {
+    color: #3b5998;
+}
+
+footer .social-icons a .fa-twitter {
+    color: #1da1f2;
+}
+
+footer .social-icons a .fa-instagram {
+    color: #e1306c;
+}
+
+/* Hover effect */
+footer .social-icons a:hover {
+    transform: scale(1.2);
+}
     </style>
 </head>
 <body>
@@ -98,7 +122,7 @@
             <a href="index.html">Home</a>
             <a href="recipe.html">Recipes</a>
             <a href="about-us.html">About Us</a>
-            <a href="Contactus.html">Contact Us</a>
+            <a href="contact-us.html">Contact Us</a>
         </nav>
     </header>
 
@@ -108,10 +132,10 @@
         <p>If you have any questions, feedback, or suggestions, we'd love to hear from you. Please fill out the form below, and we'll get back to you as soon as possible.</p>
         
         <!-- Contact Form -->
-        <form class="contact-form">
-            <input type="text" class="form-control" placeholder="Your Name" required>
-            <input type="email" class="form-control" placeholder="Your Email" required>
-            <textarea class="form-control" rows="5" placeholder="Your Message" required></textarea>
+        <form class="contact-form" action="contact.php" method="POST">
+            <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+            <input type="email" name="email" class="form-control" placeholder="Your Email" required>
+            <textarea name="message" class="form-control" rows="5" placeholder="Your Message" required></textarea>
             <button type="submit" class="submit-btn">Send Message</button>
         </form>
     </section>
@@ -131,5 +155,13 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <footer>
+    
+        <div class="social-icons">
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
