--- a/desserts-recipes.html
+++ b/desserts-recipes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dessert Recipes - Digital Recipe Book</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -81,6 +82,30 @@
             text-align: center;
             padding: 20px 0;
         }
+        ooter .social-icons a {
+    font-size: 24px;
+    text-decoration: none;
+    transition: transform 0.3s;
+}
+
+/* Default brand colors */
+footer .social-icons a .fa-facebook-f {
+    color: #3b5998;
+}
+
+footer .social-icons a .fa-twitter {
+    color: #1da1f2;
+}
+
+footer .social-icons a .fa-instagram {
+    color: #e1306c;
+}
+
+/* Hover effect */
+footer .social-icons a:hover {
+    transform: scale(1.2);
+}
+        
     </style>
 </head>
 <body>
@@ -118,6 +143,78 @@
                     <a href="lemon-meringue-pie.html" class="btn btn-danger">View Recipe</a>
                 </div>
             </div>
+            <!-- Recipe 3: Oreo Dessert -->
+            <div class="recipe-card">
+                <img src="https://bing.com/th?id=OSK.ac55fdaa8e8d028dd8d8255767482e25" alt="Oreo Dessert">
+                <div class="card-body">
+                    <h5 class="card-title">Oreo Dessert</h5>
+                    <p class="card-text">This chocolate dessert is made up of pudding, cream cheese, cool whip, and Oreos, of course</p>
+                    <a href="Oreo Dessert.html" class="btn btn-danger">View Recipe</a>
+                </div>
+            </div>
+            <!-- Recipe 4: Ice Cream Sandwich Desserts -->
+            <div class="recipe-card">
+                <img src="https://bing.com/th?id=OSK.2a36156208dba6aadcecc7dce87a6ebb" alt="Ice Cream Sandwich Desserts">
+                <div class="card-body">
+                    <h5 class="card-title">Ice Cream Sandwich Desserts</h5>
+                    <p class="card-text">No one will believe this awesome dessert is just dressed-up ice cream sandwiches</p>
+                    <a href="Ice Cream Sandwich Desserts.html" class="btn btn-danger">View Recipe</a>
+                </div>
+            </div>
+            <!-- Recipe 5: Pumpkin Pudding Desserts -->
+            <div class="recipe-card">
+                <img src="https://bing.com/th?id=OSK.e295f64da38f0d0ea20e02bed7d30505" alt="Pumpkin Pudding Desserts">
+                <div class="card-body">
+                    <h5 class="card-title">Pumpkin Pudding Desserts</h5>
+                    <p class="card-text">Very delicious when topped with cool whip like a real pumpking pie! Could be considered</p>
+                    <a href="Pumpkin Pudding Desserts.html" class="btn btn-danger">View Recipe</a>
+                </div>
+            </div>
+            <!-- Recipe 6:Butterscotch Pecan Dessert -->
+            <div class="recipe-card">
+                <img src="https://bing.com/th?id=OSK.ab44667cd0e26cd7517e4ddf030a6b05" alt="Butterscotch Pecan Dessert">
+                <div class="card-body">
+                    <h5 class="card-title">Butterscotch Pecan Dessert</h5>
+                    <p class="card-text">Very delicious when topped with cool whip like a real pumpking pie! Could be considered</p>
+                    <a href="Butterscotch Pecan Dessert.html" class="btn btn-danger">View Recipe</a>
+                </div>
+            </div>
+            <!-- Recipe 7:Banana apple crisp -->
+            <div class="recipe-card">
+                <img src="https://bing.com/th?id=OSK.ba97340db4cb4fd637bf9f65c1ae259f" alt="Banana apple crisp">
+                <div class="card-body">
+                    <h5 class="card-title">Banana apple crisp</h5>
+                    <p class="card-text">Tender flat beans cooked with garlic, tomatoes, and Italian herbs</p>
+                    <a href="Banana apple crisp.html" class="btn btn-danger">View Recipe</a>
+                </div>
+            </div>
+            <!-- Recipe 8:Cherry Dessert -->
+            <div class="recipe-card">
+                <img src="https://bing.com/th?id=OSK.4002995074e68848b02f5267d8b45c1a" alt="Cherry Dessert">
+                <div class="card-body">
+                    <h5 class="card-title">Cherry Dessert</h5>
+                    <p class="card-text">A cracker crust, a creamy middle layer and cherry topping make this simple but wonderful treat</p>
+                    <a href="Cherry Dessert.html" class="btn btn-danger">View Recipe</a>
+                </div>
+            </div>
+            <!-- Recipe 9:Lemon Meringue Desserts -->
+            <div class="recipe-card">
+                <img src="https://bing.com/th?id=OSK.b2e93f1f573c40e5118b5312802d0482" alt="Lemon Meringue Desserts">
+                <div class="card-body">
+                    <h5 class="card-title">Lemon Meringue Desserts</h5>
+                    <p class="card-text">A sweet and fluffy golden meringue tops the pudding that's rich with lemony flavor</p>
+                    <a href="Cherry Dessert.html" class="btn btn-danger">View Recipe</a>
+                </div>
+            </div>
+            <!-- Recipe 10:Raspberry Cream Cheese Dessert -->
+            <div class="recipe-card">
+                <img src="https://bing.com/th?id=OSK.f152158851528f213dcf71d260b85876" alt="Raspberry Cream Cheese Dessert">
+                <div class="card-body">
+                    <h5 class="card-title">Raspberry Cream Cheese Dessert</h5>
+                    <p class="card-text">ts pretty color, creamy texture and terrific flavor make it a favorite, while its light, no-bake filling makes it easy</p>
+                    <a href="Raspberry Cream Cheese Dessert.html" class="btn btn-danger">View Recipe</a>
+                </div>
+            </div>
         </div>
 
     </section>
@@ -127,5 +224,13 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <footer>
+    
+        <div class="social-icons">
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
