--- a/italian-recipes.html
+++ b/italian-recipes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Italian Recipes - Digital Recipe Book</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -81,6 +82,30 @@
             text-align: center;
             padding: 20px 0;
         }
+    }
+        footer .social-icons a {
+    font-size: 24px;
+    text-decoration: none;
+    transition: transform 0.3s;
+}
+
+/* Default brand colors */
+footer .social-icons a .fa-facebook-f {
+    color: #3b5998;
+}
+
+footer .social-icons a .fa-twitter {
+    color: #1da1f2;
+}
+
+footer .social-icons a .fa-instagram {
+    color: #e1306c;
+}
+
+/* Hover effect */
+footer .social-icons a:hover {
+    transform: scale(1.2);
+}
     </style>
 </head>
 <body>
@@ -151,7 +176,7 @@
 
             <!-- Recipe 6: Frittata -->
             <div class="recipe-card">
-                <img src="https://th.bing.com/th/id/OIF.HwaxzNHh3QfBu1G1dX0YYw?rs=1&pid=ImgDetMain" alt="Frittata">
+                <img src="https://th.bing.com/th/id/OIP.Ve5HH7qE3kyHz8MUnPSciQHaE8?rs=1&pid=ImgDetMain" alt="Frittata">
                 <div class="card-body">
                     <h5 class="card-title">Frittata</h5>
                     <p class="card-text">An Italian-style omelette made with eggs, vegetables, and cheese.</p>
@@ -178,6 +203,24 @@
                     <a href="gnocchi.html" class="btn btn-danger">View Recipe</a>
                 </div>
             </div>
+            <!-- Recipe 9: Italian Wedding Soup -->
+            <div class="recipe-card">
+                <img src="https://bing.com/th?id=OSK.3a2f2efa58cc5609ebf94a3538936e89" alt="Italian Wedding Soup">
+                <div class="card-body">
+                    <h5 class="card-title">Italian Wedding Soup</h5>
+                    <p class="card-text">For a warm bowl of Italian comfort, try Giada De Laurentiis' Italian Wedding Soup recipe, studded with tasty little beef-pork meatballs.</p>
+                    <a href="Italian Wedding Soup.html" class="btn btn-danger">View Recipe</a>
+                </div>
+            </div>
+            <!-- Recipe 10: Italian Green Beans -->
+            <div class="recipe-card">
+                <img src="https://bing.com/th?id=OSK.b5034d676c4ee9dd11a56b68c072005c" alt="Italian Green Beans">
+                <div class="card-body">
+                    <h5 class="card-title">Italian Green Beans</h5>
+                    <p class="card-text">Italian Green Beans are tender, flat beans sautéed or simmered with garlic, tomatoes, and herbs, offering a flavorful twist on a classic side dish</p>
+                    <a href="Italian green beans.html" class="btn btn-danger">View Recipe</a>
+                </div>
+            </div>
         </div>
 
     </section>
@@ -187,5 +230,13 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <footer>
+    
+        <div class="social-icons">
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
