--- a/mediterranean-recipes.html
+++ b/mediterranean-recipes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mediterranean Recipes - Digital Recipe Book</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -81,6 +82,29 @@
             text-align: center;
             padding: 20px 0;
         }
+        footer .social-icons a {
+    font-size: 24px;
+    text-decoration: none;
+    transition: transform 0.3s;
+}
+
+/* Default brand colors */
+footer .social-icons a .fa-facebook-f {
+    color: #3b5998;
+}
+
+footer .social-icons a .fa-twitter {
+    color: #1da1f2;
+}
+
+footer .social-icons a .fa-instagram {
+    color: #e1306c;
+}
+
+/* Hover effect */
+footer .social-icons a:hover {
+    transform: scale(1.2);
+}
     </style>
 </head>
 <body>
@@ -118,6 +142,79 @@
                     <a href="grilled-salmon.html" class="btn btn-danger">View Recipe</a>
                 </div>
             </div>
+            
+                <!-- Recipe 3: Mediterranean Diet -->
+                <div class="recipe-card">
+                    <img src="https://bing.com/th?id=OSK.a517513fcab65595736982b65fec2fdb" alt=" Mediterranean Diet">
+                    <div class="card-body">
+                        <h5 class="card-title"> Mediterranean Diet</h5>
+                        <p class="card-text">Find recipes that fit the Mediterranean diet, using lots of olive oil, fresh fruit and veggies, beans, and fish..</p>
+                        <a href="Mediterranean Diet.html" class="btn btn-danger">View Recipe</a>
+                    </div>
+                </div>
+                <!-- Recipe 4: Mediterranean Chicken Recipe -->
+                <div class="recipe-card">
+                    <img src="https://bing.com/th?id=OSK.fd5b6f6a60d95ea4777a4493d6521be6" alt=" Mediterranean Chicken Recipe">
+                    <div class="card-body">
+                        <h5 class="card-title"> Mediterranean Chicken Recipe</h5>
+                        <p class="card-text">This easy Mediterranean chicken recipe requires little prep, and only 20 minutes to cook. </p>
+                        <a href="Mediterranean Chicken Recipet.html" class="btn btn-danger">View Recipe</a>
+                    </div>
+                </div>
+                <!-- Recipe 5: Mediterranean Pasta-->
+                <div class="recipe-card">
+                    <img src="https://bing.com/th?id=OSK.4eaf227f6a3fbad4c787e7743da9b856" alt=" Mediterranean Pasta">
+                    <div class="card-body">
+                        <h5 class="card-title"> Mediterranean Pasta</h5>
+                        <p class="card-text">. A fast, healthy pasta recipe that’s easy to make and filled with bright flavor!</p>
+                        <a href="Mediterranean Pasta.html" class="btn btn-danger">View Recipe</a>
+                    </div>
+                </div>
+                <!-- Recipe 6: Mediterranean Quesadillas-->
+                <div class="recipe-card">
+                    <img src="https://bing.com/th?id=OSK.332c3c4c743f231bd4158bb37435edbc" alt=" Mediterranean Quesadillas">
+                    <div class="card-body">
+                        <h5 class="card-title"> Mediterranean Quesadillas</h5>
+                        <p class="card-text">Mediterranean quesadillas filled with a mix of spinach, feta cheese, olives, tomatoes, and red onion</p>
+                        <a href="Mediterranean Quesadillas.html" class="btn btn-danger">View Recipe</a>
+                    </div>
+                </div>
+                <!-- Recipe 7:Mediterranean Layered Bake-->
+                <div class="recipe-card">
+                    <img src="https://bing.com/th?id=OSK.bf6d98a5ce1964d3be42cc1f85154ac4" alt=" Mediterranean Layered Bake">
+                    <div class="card-body">
+                        <h5 class="card-title">Mediterranean Layered Bake</h5>
+                        <p class="card-text">Delicious layers of potato, tomatoes, aubergine, peppers and courgette topped with a cheesy white bechamel style sauce.</p>
+                        <a href="Mediterranean Layered Bake.html" class="btn btn-danger">View Recipe</a>
+                    </div>
+                </div>
+                <!-- Recipe 8:Mediterranean White Bean Soup-->
+                <div class="recipe-card">
+                    <img src="https://bing.com/th?id=OSK.3964e4f38f9661af882ad6c10a6a432b" alt=" Mediterranean White Bean Soup">
+                    <div class="card-body">
+                        <h5 class="card-title">Mediterranean White Bean Soup</h5>
+                        <p class="card-text">It's a feel-good, meatless meal for any night of the week.</p>
+                        <a href="Mediterranean White Bean Soup.html" class="btn btn-danger">View Recipe</a>
+                    </div>
+                </div>
+                <!-- Recipe 9:Mediterranean Turkey Panini-->
+                <div class="recipe-card">
+                    <img src="https://bing.com/th?id=OSK.8fea3b7a21f91f87b4264032df375097" alt="Mediterranean Turkey Panini">
+                    <div class="card-body">
+                        <h5 class="card-title">Mediterranean Turkey Panini</h5>
+                        <p class="card-text">The word panini refers to sandwiches that are pressed and toasted.</p>
+                        <a href="Mediterranean Turkey Panini.html" class="btn btn-danger">View Recipe</a>
+                    </div>
+                </div>
+                <!-- Recipe 10:Mediterranean Nachos-->
+                <div class="recipe-card">
+                    <img src="https://bing.com/th?id=OSK.07b7f51e50f58e05aa803e1aba8f60a1" alt="Mediterranean Nachos">
+                    <div class="card-body">
+                        <h5 class="card-title">Mediterranean Nachos</h5>
+                        <p class="card-text">Add Greek flavor to nachos with feta cheese, sun-dried tomatoes and olives in a tasty, 10-minute appetizer.</p>
+                        <a href="Mediterranean Nachos.html" class="btn btn-danger">View Recipe</a>
+                    </div>
+                </div>
         </div>
 
     </section>
@@ -127,5 +224,13 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <footer>
+    
+        <div class="social-icons">
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+    </footer>1
 </body>
 </html>
