--- a/vegetarian-recipes.html
+++ b/vegetarian-recipes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vegetarian Recipes - Digital Recipe Book</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -81,6 +82,29 @@
             text-align: center;
             padding: 20px 0;
         }
+        footer .social-icons a {
+    font-size: 24px;
+    text-decoration: none;
+    transition: transform 0.3s;
+}
+
+/* Default brand colors */
+footer .social-icons a .fa-facebook-f {
+    color: #3b5998;
+}
+
+footer .social-icons a .fa-twitter {
+    color: #1da1f2;
+}
+
+footer .social-icons a .fa-instagram {
+    color: #e1306c;
+}
+
+/* Hover effect */
+footer .social-icons a:hover {
+    transform: scale(1.2);
+}
     </style>
 </head>
 <body>
@@ -128,6 +152,71 @@
                     <a href="caprese-salad.html" class="btn btn-danger">View Recipe</a>
                 </div>
             </div>
+            <!-- Recipe 4: Vietnamese Noodle Soup -->
+            <div class="recipe-card">
+                <img src="https://bing.com/th?id=OSK.89cc944474a54277cd9a404ab1a65c92" alt="Vietnamese Noodle Soup">
+                <div class="card-body">
+                    <h5 class="card-title">Vietnamese Noodle Soup</h5>
+                    <p class="card-text">This easy vegan pho recipe is made with the most delicious rich broth and your choice of veggies </p>
+                    <a href="Vietnamese Noodle Soup.html" class="btn btn-danger">View Recipe</a>
+                </div>
+            </div>
+            <!-- Recipe 5:Cheesy macaroni pie with sweetcorn  -->
+            <div class="recipe-card">
+                <img src="https://images.immediate.co.uk/production/volatile/sites/2/2024/01/OLIVE3WaysMacSweetcornPie206-0f7a520.gif?quality=90&webp=true&resize=375,341" alt="Cheesy macaroni pie with sweetcorn">
+                <div class="card-body">
+                    <h5 class="card-title">Cheesy macaroni pie with sweetcorn</h5>
+                    <p class="card-text">Combining two classic comfort foods, this irresistible macaroni cheese pie is brightened up with sweetcorn and pickles </p>
+                    <a href="Cheesy macaroni pie with sweetcorn.html" class="btn btn-danger">View Recipe</a>
+                </div>
+            </div>
+           <!-- Recipe 6:Lime, feta and coriander sweetcorn -->
+           <div class="recipe-card">
+            <img src="https://images.immediate.co.uk/production/volatile/sites/2/2024/01/SweetcornFetaSalad135-1-9d93cf1.gif?quality=90&webp=true&resize=375,341" alt="Lime, feta and coriander sweetcorn">
+            <div class="card-body">
+                <h5 class="card-title">Lime, feta and coriander sweetcorn</h5>
+                <p class="card-text">This zesty and refreshing side uses tinned sweetcorn to keep things simple. </p>
+                <a href="Lime, feta and coriander sweetcorn.html" class="btn btn-danger">View Recipe</a>
+            </div>
+        </div> 
+         <!-- Recipe 7:Carrot and coriander soup -->
+         <div class="recipe-card">
+            <img src="https://images.immediate.co.uk/production/volatile/sites/2/2020/02/Carrot-and-coriander_preview-d48d069.jpg?quality=90&webp=true&resize=375,341" alt="Carrot and coriander soup">
+            <div class="card-body">
+                <h5 class="card-title">Carrot and coriander soup</h5>
+                <p class="card-text">This zesty and refreshing side uses tinned sweetcorn to keep things simple. </p>
+                <a href="Carrot and coriander soup.html" class="btn btn-danger">View Recipe</a>
+            </div>
+        </div> 
+        <!-- Recipe 8:Celery soup -->
+        <div class="recipe-card">
+            <img src="https://images.immediate.co.uk/production/volatile/sites/2/2023/03/Roasted-celery-soup-caa7702.jpg?quality=90&webp=true&resize=375,341" alt="Celery soup">
+            <div class="card-body">
+                <h5 class="card-title">Celery soup</h5>
+                <p class="card-text">Get cosy with a bowl of roasted celery soup, topped with chopped chives or parsley </p>
+                <a href="Celery soup.html" class="btn btn-danger">View Recipe</a>
+            </div>
+        </div> 
+        <!-- Recipe 9:Cheese and chive scones -->
+        <div class="recipe-card">
+            <img src="https://images.immediate.co.uk/production/volatile/sites/2/2025/04/CheddarChivesSconespreview-ecba5f6.jpg?quality=90&webp=true&resize=375,341" alt="Cheese and chive scones">
+            <div class="card-body">
+                <h5 class="card-title">Cheese and chive scones</h5>
+                <p class="card-text">Fresh savoury scones, ready in just 30 minutes. Serve these just warm with soft butter for spreading
+                </p>
+                <a href="Cheese and chive scones.html" class="btn btn-danger">View Recipe</a>
+            </div>
+        </div> 
+        <!-- Recipe 10:Air-fryer scones -->
+        <div class="recipe-card">
+            <img src="https://images.immediate.co.uk/production/volatile/sites/2/2023/12/Air-fryer-scones-2.0-0f9c1a7.jpg?quality=90&webp=true&resize=375,341" alt="Air-fryer scones">
+            <div class="card-body">
+                <h5 class="card-title">Air-fryer scones</h5>
+                <p class="card-text">Perfect for an afternoon tea, these air-fryer scones are fluffy and light </p>
+               
+                <a href="Air-fryer scones.html" class="btn btn-danger">View Recipe</a>
+            </div>
+        </div> 
         </div>
 
     </section>
@@ -137,5 +226,13 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <footer>
+    
+        <div class="social-icons">
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
