about us updated
about us updated

--- a/about-us.html
+++ b/about-us.html
@@ -276,7 +276,7 @@ footer .social-icons a:hover {
         <div class="team-members">
             <!-- Team Member 1 -->
             <div class="team-card">
-                <img src="https://th.bing.com/th/id/OIP.v-yowbhUOjXV6XGxF1ZYYAHaF7?pid=ImgDet&w=700&h=560&rs=1" alt="Team Member">
+                <img src="https://th.bing.com/th/id/OIP.D4lGdu-PJCR_ak1XMA5T8QHaDF?rs=1&pid=ImgDetMain" alt="Team Member">
                 <div class="card-body">
                     <h5 class="card-title">Jane Doe</h5>
                     <p class="card-text">Founder & Chef</p>
@@ -286,7 +286,7 @@ footer .social-icons a:hover {
             </div>
             <!-- Team Member 2 -->
             <div class="team-card">
-                <img src="https://th.bing.com/th/id/OIP.c2xtjBaPdzsaEcs3GH6RFAHaHa?pid=ImgDet&rs=1" alt="Team Member">
+                <img src="https://th.bing.com/th/id/OIP.CqwMwS_VyemihpXGk_VmFgHaHP?rs=1&pid=ImgDetMain" alt="Team Member">
                 <div class="card-body">
                     <h5 class="card-title">John Smith</h5>
                     <p class="card-text">Recipe Curator</p>
@@ -296,7 +296,7 @@ footer .social-icons a:hover {
             </div>
             <!-- Team Member 3 -->
             <div class="team-card">
-                <img src="https://th.bing.com/th/id/OIP.M4c0-QCWqxy-q0hAlh7PbwHaFj?pid=ImgDet&rs=1" alt="Team Member">
+                <img src="https://th.bing.com/th/id/OIP.fEy_PA8Kfm2EP5IjnE-T9gHaHj?rs=1&pid=ImgDetMain" alt="Team Member">
                 <div class="card-body">
                     <h5 class="card-title">Emily Brown</h5>
                     <p class="card-text">Nutrition Expert</p>
