--- a/desserts-recipes.html
+++ b/desserts-recipes.html
@@ -203,7 +203,7 @@ footer .social-icons a:hover {
                 <div class="card-body">
                     <h5 class="card-title">Lemon Meringue Desserts</h5>
                     <p class="card-text">A sweet and fluffy golden meringue tops the pudding that's rich with lemony flavor</p>
-                    <a href="Cherry Dessert.html" class="btn btn-danger">View Recipe</a>
+                    <a href="Lemon Meringue Desserts.html" class="btn btn-danger">View Recipe</a>
                 </div>
             </div>
             <!-- Recipe 10:Raspberry Cream Cheese Dessert -->
