--- a/vegetarian-recipes.html
+++ b/vegetarian-recipes.html
@@ -149,7 +149,7 @@ footer .social-icons a:hover {
                 <div class="card-body">
                     <h5 class="card-title">Caprese Salad</h5>
                     <p class="card-text">A fresh, light salad with tomatoes, mozzarella, basil, and balsamic glaze.</p>
-                    <a href="caprese-salad.html" class="btn btn-danger">View Recipe</a>
+                    <a href="caprese-salad1.html" class="btn btn-danger">View Recipe</a>
                 </div>
             </div>
             <!-- Recipe 4: Vietnamese Noodle Soup -->
