--- a/signup.html
+++ b/signup.html
@@ -64,20 +64,20 @@ footer .social-icons a:hover {
 <body>
     <div class="signup-container">
         <h2 class="form-title">Sign Up</h2>
-        <form action="#" method="post">
+        <form action="register.php" method="post">
             <div class="mb-3">
                 <label>Full Name</label>
-                <input type="text" class="form-control" required>
+                <input type="text" name="username" class="form-control" required>
             </div>
             <div class="mb-3">
                 <label>Email address</label>
-                <input type="email" class="form-control" required>
+                <input type="email" name="email" class="form-control" required>
             </div>
             <div class="mb-3">
                 <label>Password</label>
                 <input type="password" class="form-control" required>
             </div>
-            <button type="submit" class="btn btn-custom w-100">Sign Up</button>
+            <button type="submit" name="password" class="btn btn-custom w-100">Sign Up</button>
         </form>
         <p class="mt-3 text-center">Already have an account? <a href="login.html">Login</a></p>
     </div>
